# rust-actix-rabbit-consumer

./: .env  Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs  routes.rs
src/entity/: created_book_event.rs  health.rs  mod.rs
