[package]
name = "rust-actix-rabbit-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.2"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
borsh = "0.9.3"
borsh-derive = "0.9.1"
crosstown_bus = "0.2.2"
